Fix display shift

--- a/src/Components/CategoriesDisplay/CategoriesDisplay.css
+++ b/src/Components/CategoriesDisplay/CategoriesDisplay.css
@@ -1,6 +1,6 @@
 .categories-display {
   padding: 8vh 10vw 0 10vw;
-  height: 74vh;
+  height: 77vh;
   background-color: #959595;
   padding: 20px;
   display: grid;
